# TenTrans-Decoding

./: README.md  config.b16.yml
conf/: config.yml
examples/: WMT21-Efficiency.md
lib/dynamicLibs/: libboost_filesystem.so.1.66.0  libboost_system.so.1.66.0
scripts/: build_n_grams.py  format.py  load_npz.py
src/: CMakeLists.txt  main.cpp
src.nmt.0805.reduce_vocab/: CMakeLists.txt  main.cpp  main_xlm.cpp
src.nmt.0805.reduce_vocab/api/: online_decoder.cpp  online_decoder.h
src.nmt.0805.reduce_vocab/api.bak/: export_api.cpp  export_api.h  main.cpp  online_decoder.cpp  online_decoder.h
src.nmt.0805.reduce_vocab/config/: HUConfig.cpp  HUConfigParser.cpp
src.nmt.0805.reduce_vocab/data/: HUData.cpp  HUData.h  HUVocab.h
src.nmt.0805.reduce_vocab/device/: HUDevice.cu
src.nmt.0805.reduce_vocab/layer/: HUBaseLayer.h  HUDecoder.cpp  HUDecoder.h  HUDecoderState.h  HUEmbeddingLayer.h  HUEncoder.h  HUEncoderDecoder.cpp  HUEncoderDecoder.h  HUEncoderLayer.h  HUFFNLayer.h  HULayerNorm.cpp  HULayerNorm.h  HUMultiHeadAttention.cpp  HUMultiHeadAttention.cpp.bak  HUMultiHeadAttention.h  HUOutputLayer.cpp  HUOutputLayer.h
src.nmt.0805.reduce_vocab/mem/: HUMemory.h
src.nmt.0805.reduce_vocab/nvidia_export/: attention_kernels.cu  attention_kernels.cuh
src.nmt.0805.reduce_vocab/search/: HUBeamCell.h  HUBeamSearch.cpp  HUBeamSearch.h  HUHistory.h  HUResult.cpp  HUResult.h
src.nmt.0805.reduce_vocab/task/: main.cpp.bak
src.nmt.0805.reduce_vocab/tensor/: HUTensor.cpp  HUTensor.cu  HUTensorOP.cu  HUTensorOP.h  HUTensorUtil.cpp  HUTensorUtil.h
src.nmt.0805.reduce_vocab/tensor/cuda/: arguments.h  masked_multihead_attention.cu  masked_multihead_attention.h  nccl_utils.h  topk_kernels.cuh
src.nmt.0805.reduce_vocab/utils/: HUFunctional.h  HUNthElement.cu  HUNthElement.h  HUUtil.cpp  HUUtil.h
src.nmt.0805.reduce_vocab/utils/bak/: HUNthElement.cu
src/api/: doCompile.sh  export_api.cpp  online_decoder.cpp  run.sh
src/config/: HUConfig.h  HUConfigParser.cpp  HUConfigParser.h
src/data/: HUData.cpp  HUData.h  HUShape.h  HUVocab.cpp
src/device/: HUDevice.h
src/global/: HUGlobal.h
src/layer/: HUBaseLayer.cpp  HUBaseLayer.h  HUDecoder.cpp  HUDecoder.h  HUDecoderLayer.cpp  HUDecoderLayer.h  HUDecoderState.h  HUEmbeddingLayer.cpp  HUEmbeddingLayer.h  HUEncoder.cpp  HUEncoder.h  HUEncoderDecoder.cpp  HUEncoderDecoder.h  HUEncoderLayer.cpp  HUEncoderState.h  HUFFNLayer.cpp  HULayerNorm.cpp  HUMultiHeadAttention.cpp  HUMultiHeadAttention.h  HUOutputLayer.cpp  HUOutputLayer.h
src/mem/: HUMemory.h
src/search/: HUBeamCell.h  HUBeamSearch.cpp  HUBeamSearch.h  HUHistory.h  HUResult.cpp  HUResult.h
src/task/: Classifier.cpp  Classifier.h  NMT.cpp  NMT.h
src/tensor/: HUTensor.cpp  HUTensor.cu  HUTensor.h  HUTensorOP.cu  HUTensorOP.h  HUTensorUtil.cpp  HUTensorUtil.h
src/tensor/cuda/: common.h  cuda_kernels.cu  cuda_kernels.h  encoder_igemm_func.cc  encoder_igemm_func.h  masked_multihead_attention.cu  online_softmax_beamsearch_kernels.cu  topk_kernels.cu
src/utils/: HUCudaHelper.h  HUFunctional.h  HUNthElement.cu  HUUtil.cpp  HUUtil.h  Logging.cpp  Logging.h
tools/: get_vocab.py  load_torch_model.py  run_convert.sh
